--- a/style.css
+++ b/style.css
@@ -4,34 +4,27 @@ html {
 }
 
 body {
- 
   align-content: center;
   font-size: 50px;
 }
 
 .section {
-  
   font-size: 50;
   padding: 24pc;
   margin-bottom: 10px;
 }
 
-.titre{
+.titre {
   display: flex;
   justify-content: center;
 }
 
-
 h2 {
-
   font-size: 10pc;
   color: black;
-  width: fit-content; 
-  border-bottom: 12px solid #9A0000;
+  width: fit-content;
+  border-bottom: 12px solid #9a0000;
   margin-left: 500;
-  
-
-  
 }
 
 p {
@@ -40,61 +33,58 @@ p {
   font-size: 50px;
 }
 
-
-form{
-  
+form {
   align-items: center;
 }
 
-
+.nomDroite {
+  margin-right: 46pc;
+}
 .nomPrenom {
   display: flex;
   justify-content: space-between;
   margin-top: 100px;
   margin-right: 34pc;
- 
 }
 .nomPrenomFormulaire {
   display: flex;
- 
 }
 
 textarea {
-  
   height: 100px;
 }
 
-input, 
+input,
 textarea {
   width: 60%;
   font-size: 40px;
   background-color: #ffffff;
   text-align: left;
   margin-left: 30px;
-  margin-right: 30px;  
+  margin-right: 30px;
   margin-bottom: 10px;
   padding: 50px 10px 10px;
   border: 1px solid #af0102;
   border-radius: 20px;
- 
-  
 }
 
 .submit {
-
   width: 14pc;
   font-size: 50px;
   background-color: #ffffff;
   color: black;
   text-align: center;
   margin-top: 80px;
-  margin-left: 40pc;
+  margin-left: 50pc;
   padding: 30px;
   border-radius: 20px;
-  
-
 }
 .submit:hover {
   background-color: #af0102;
 }
-@media only screen and (max-with:749px){}
+
+@media only screen and (max-with: 749px) {
+  .nomDroite {
+    margin-left: 60pc;
+  }
+}
