--- a/stylesheet.css
+++ b/stylesheet.css
@@ -205,3 +205,26 @@ h3 {
     padding: 5px;
     margin-top: 3%;
 }
+
+/*---------------------SECTION_6_eventers---------------------- */
+
+.section_6 {
+    color: black;
+    font-family: 'Comfortaa', cursive;
+    font-size: 38pt;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    padding-top: 8px;
+    background-color: #E1E1E1;
+	background-image: url(img/swirl_pattern.png);
+	background-repeat: no-repeat;
+	background-position: left;
+    background-size: cover;
+}
+
+.logo img {
+    width:  50px;
+    height: 50px;
+    justify-content: space-around;
+}
