--- a/stylesheet.css
+++ b/stylesheet.css
@@ -214,12 +214,13 @@ body {
 .section {
   /* (else Conflit) font-size: 10px; */
   margin-bottom: 10px;
-  
+
 }
 
 .titre {
   display: flex;
   justify-content: center;
+  margin-top: 13%;
 }
 
 
@@ -238,7 +239,7 @@ form {
   flex-direction: column;
   justify-content: center;
   margin-left: 5%;
-  
+
 }
 
 .nomPrenom {
@@ -260,9 +261,9 @@ textarea {
 
 input,
 textarea {
+  width: 67%;
   font-size: 20px;
-  background-color:
-    #ffffff;
+  background-color: #ffffff;
   text-align: left;
   margin-left: 30px;
   margin-right: 30px;
@@ -270,7 +271,13 @@ textarea {
   padding: 40px 10px 10px;
   border: 1px solid #af0102;
   border-radius: 20px;
+  box-shadow: 2px 3px 2px #9D271F;
 }
+
+/* textarea{
+width: 67%;
+
+} */
 
 .submit {
   width: 15%;
@@ -289,20 +296,20 @@ textarea {
 
 @media only screen and (max-width: 1080px) {
   .nomPrenom {
-    
+
     flex-direction: column;
-    
+
   }
 
   .allFormulaire {
     display: flex;
     justify-content: center;
-    
+
   }
 
   .submit {
     width: 25%;
-  
+
   }
 }
 
