--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,9 +42,11 @@ a {
 }
 
 
+
 ul {
     list-style: none;
     color: white;
+
 }
 
 
@@ -174,13 +176,74 @@ header h1 {
     }
 }
 
+
+/*---------------------SECTION_2_WHO_WE_ARE------------------- */
+.WhoWeAre {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    width: 90%;
+    margin-top: 50px;
+    margin-bottom: 170px;
+    margin-left: 9%;
+    font-size: 17px;
+    position: relative;
+}
+
+.imageBeer img {
+    border-radius: 0;
+    margin-top: 14%;
+}
+
+.imageBeerCaption {
+    position: absolute;
+    font-family: 'Comfortaa';
+    border: solid 3px white;
+    width: 180px;
+    background-color: #AF0102;
+    color: white;
+    font-size: 16px;
+    left: 4%;
+    top: 20%;
+}
+
+
+.rightsideImage {
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    margin-left: 40px;
+    margin-bottom: 70px;
+    width: 50%;
+    text-align: justify;
+}
+
+.paraone {
+    margin-bottom: -50px;
+    color: darkgray;
+}
+
+.paratwo {
+    color: darkgray;
+    width: 57%;
+    margin-left: 240px;
+    margin-top: -160px;
+    font-size: 17px;
+    margin-bottom: 100px;
+    text-align: justify;
+}
+
+
+
 /*---------------------SECTION_3_OUR_TEAM ( Daniel ) ------------------- */
 
 section {
+
     width: 80vw;
     margin: auto;
     display: flex;
     flex-direction: column;
+
 }
 
 .title__container {
@@ -209,7 +272,8 @@ figure {
     margin-bottom: 40px;
 }
 
-/* .figure__container:hover{
+/* 
+.figure__container:hover{
     background-color: #4c4747;
     transition: .5s;
     color: white;
@@ -286,11 +350,13 @@ img {
 }
 
 .boxesEvent {
+
+
     display: flex;
     height: 38%;
-    width: 62%;
+    width: 69%;
     margin-top: 3%;
-    margin-left: 17%;
+    margin-left: 15%;
 }
 
 .redboxSalsa {
@@ -315,7 +381,11 @@ img {
 }
 
 h3 {
-    background-color: #9d271f;
+
+
+    background-color: #9D271F;
+    font-family: 'Comfortaa';
+
     text-align: center;
     color: white;
     padding-top: 8px;
@@ -325,6 +395,9 @@ h3 {
 }
 
 .monthEvent {
+
+    font-family: 'Comfortaa';
+
     width: auto;
     color: #68a9f8;
     font-weight: normal;
@@ -334,6 +407,9 @@ h3 {
 }
 
 .dayEvent {
+
+    font-family: 'Comfortaa';
+
     width: auto;
     color: black;
     font-weight: bold;
@@ -342,6 +418,9 @@ h3 {
 }
 
 .nameEvent {
+
+    font-family: 'Comfortaa';
+
     width: auto;
     color: black;
     font-weight: normal;
@@ -351,6 +430,7 @@ h3 {
 }
 
 .aboutEvent {
+    font-family: 'Comfortaa';
     width: auto;
     font-weight: lighter;
     font-size: smaller;
@@ -361,20 +441,16 @@ h3 {
 
 /*---------------------SECTION_5_Need_an_EVENT? ( Wassim )---------------------- */
 
-/* (else Conflit)
-    html {
-    margin: 0;
-    padding: 0;
-  } */
 
 body {
     align-content: center;
 }
 
 .section {
+
     /* (else Conflit) font-size: 10px; */
-    padding: 14pc;
     margin-bottom: 10px;
+
 }
 
 .titre {
@@ -382,37 +458,37 @@ body {
     justify-content: center;
 }
 
-/* (else Conflit)
-    h2 { 
-    font-size: 4pc;
-    color: black;
-    width: fit-content;
-    border-bottom: 12px solid #9a0000;
-   
-  } */
 
 .p {
+
     color: black;
     margin-right: 10pc;
-    font-size: 35px;
+    font-size: 25px;
 }
 
 form {
-    align-items: center;
+    margin-left: 20%;
 }
 
-.nomDroite {
-    margin-right: 24pc;
+.allFormulaire {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 5%;
+
 }
 
 .nomPrenom {
     display: flex;
-    justify-content: space-between;
-    margin-top: 100px;
+    /* flex-direction: column;  */
 }
 
-.nomPrenomFormulaire {
-    display: flex;
+.nomPrenom input {
+    width: 300px;
+}
+
+.nom {
+    padding-right: 10%;
 }
 
 textarea {
@@ -421,26 +497,27 @@ textarea {
 
 input,
 textarea {
-    width: 93%;
+
     font-size: 20px;
-    background-color: #ffffff;
+    background-color:
+        #ffffff;
     text-align: left;
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 10px;
-    padding: 50px 10px 10px;
+    padding: 40px 10px 10px;
     border: 1px solid #af0102;
     border-radius: 20px;
 }
 
 .submit {
-    width: 14pc;
+    width: 15%;
     font-size: 28px;
     background-color: #ffffff;
     color: black;
     text-align: center;
     margin-top: 60px;
-    padding: 20px;
+    padding: 10px;
     border-radius: 20px;
 }
 
@@ -448,12 +525,26 @@ textarea {
     background-color: #af0102;
 }
 
-/* @media only screen and (max-with: 749px ) { 
-    
-        .nomDroite{
-            margin-right: 2pc;
-            }
-  }   */
+@media only screen and (max-width: 1080px) {
+    .nomPrenom {
+
+        flex-direction: column;
+
+    }
+
+    .allFormulaire {
+        display: flex;
+        justify-content: center;
+
+    }
+
+    .submit {
+        width: 25%;
+
+    }
+}
+
+
 
 /*---------------------SECTION_6_Main_Eventers ( Madeline )---------------------- */
 
@@ -464,12 +555,17 @@ textarea {
     align-items: center;
     justify-content: space-around;
     text-align: center;
-    padding-top: 8px;
-    background-color: #E1E1E1;
+    padding-bottom: 50px;
+    background-color: white;
     background-image: url(img/swirl_pattern.png);
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-position: left;
-    background-size: cover;
+    width: 100%;
+    
+}
+
+h4 {
+    padding-top: 50px;
 }
 
 .logo img {
@@ -477,6 +573,7 @@ textarea {
     height: 50px;
     justify-content: space-around;
 }
+
 
 /* ------------------------------MEDIA_QUERIES------------------------------------------------- */
 
@@ -580,13 +677,13 @@ textarea {
     }
 
     .header__title--container img {
-        max-height: 20vh;
+        max-height: 15vh;
         max-width: 15vw;
     }
 
     /* SECTION_OUR_TEAM */
 
-    .teamMembers__container{
+    .teamMembers__container {
         display: block;
     }
 
@@ -604,8 +701,8 @@ textarea {
 
     /* SECTION_OUR_TEAM */
 
-    .teamMembers__container img{
-        max-height: 15vh;  
+    .teamMembers__container img {
+        max-height: 15vh;
     }
 }
 
@@ -630,19 +727,21 @@ textarea {
         font-size: 1.5em;
     }
 
-        /* SECTION_OUR_TEAM */
+    /* SECTION_OUR_TEAM */
 
-        .teamMembers__container img{
-            max-height: 10vh;  
-        }
-        .figure__container{
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        .figure__container--content {
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
+    .teamMembers__container img {
+        max-height: 10vh;
+    }
+
+    .figure__container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .figure__container--content {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
