--- a/stylesheet.css
+++ b/stylesheet.css
@@ -231,10 +231,13 @@ font-size: 17px;
 margin-bottom: 100px;
 text-align: justify;
 }
-
+.titlesection2{
+    overflow: hidden;
+    white-space: nowrap;
+}
 /*---------------------SECTION_3_OUR_TEAM ( Daniel ) ------------------- */
 
-section {
+#ourTeam {
 
     width: 80vw;
     margin: auto;
@@ -437,111 +440,111 @@ h3 {
 }
 
 /*---------------------SECTION_5_Need_an_EVENT? ( Wassim )---------------------- */
-
-
 body {
     align-content: center;
-}
-
-.section {
-
+  }
+  
+  .section {
     /* (else Conflit) font-size: 10px; */
     margin-bottom: 10px;
-
-}
-
-.titre {
+  
+  }
+  
+  .titre {
     display: flex;
     justify-content: center;
-}
-
-
-.p {
-
-  color: black;
-  margin-right: 10pc;
-  font-size: 25px;
-}
-
-form {
-  margin-left: 20%;
-}
-
-.allFormulaire {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 5%;
+    margin-top: 13%;
+  }
   
-}
-
-.nomPrenom {
-  display: flex;
-  /* flex-direction: column;  */
-}
-
-.nomPrenom input {
-  width: 300px;
-}
-
-.nom {
-  padding-right: 10%;
-}
-
-textarea {
+  
+  .p {
+    color: black;
+    margin-right: 10pc;
+    font-size: 25px;
+  }
+  
+  form {
+    margin-left: 20%;
+  }
+  
+  .allFormulaire {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 7%;
+  
+  }
+  
+  .nomPrenom {
+    display: flex;
+    /* flex-direction: column;  */
+  }
+  
+  .nomPrenom input {
+    width: 300px;
+  }
+  
+  .nom {
+    padding-right: 10%;
+  }
+  
+  textarea {
     height: 100px;
-}
-
-input,
-textarea {
-
-  font-size: 20px;
-  background-color:
-    #ffffff;
-  text-align: left;
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-bottom: 10px;
-  padding: 40px 10px 10px;
-  border: 1px solid #af0102;
-  border-radius: 20px;
-}
-
-.submit {
-  width: 15%;
-  font-size: 28px;
-  background-color: #ffffff;
-  color: black;
-  text-align: center;
-  margin-top: 60px;
-  padding: 10px;
-  border-radius: 20px;
-}
-
-.submit:hover {
+  }
+  
+  input,
+  textarea {
+    width: 56%;
+    font-size: 20px;
+    background-color: #ffffff;
+    text-align: left;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 10px;
+    padding: 40px 10px 10px;
+    border: 1px solid #af0102;
+    border-radius: 20px;
+    box-shadow: 2px 3px 2px #9D271F;
+  }
+  
+  /* textarea{
+  width: 67%;
+  
+  } */
+  
+  .submit {
+    width: 15%;
+    font-size: 28px;
+    background-color: #ffffff;
+    color: black;
+    text-align: center;
+    margin-top: 60px;
+    padding: 10px;
+    border-radius: 20px;
+  }
+  
+  .submit:hover {
     background-color: #af0102;
-}
-
-@media only screen and (max-width: 1080px) {
+  }
+  
+  @media only screen and (max-width: 1080px) {
     .nomPrenom {
-
-        flex-direction: column;
-
+  
+      flex-direction: column;
+  
     }
-
+  
     .allFormulaire {
-        display: flex;
-        justify-content: center;
-
+      display: flex;
+      justify-content: center;
+  
     }
-
+  
     .submit {
-        width: 25%;
-
+      width: 25%;
+  
     }
-}
-
-
+  }
 
 /*---------------------SECTION_6_Main_Eventers ( Madeline )---------------------- */
 
@@ -564,10 +567,12 @@ h4{
 }
 
 .logo img {
-    width: 50px;
+    width:  50px;
     height: 50px;
     justify-content: space-around;
 }
+
+
 
 
 /* ------------------------------MEDIA_QUERIES------------------------------------------------- */
